versions/1.21/translated/uk_ua/develop/blocks/first-block.md
---
title: Створення вашого першого блоку
description: Навчіться як створювати власні блоки в Minecraft.
authors:
  - IMB11
  - xEobardThawne
  - its-miroma
---

# Створення вашого першого блоку {#creating-your-first-block}

Блоки є будівельними блоками Minecraft (без каламбуру) - як і все інше в Minecraft, вони зберігаються в реєстрах.

## Підготовка вашого класу блоків {#preparing-your-blocks-class}

Якщо ви завершили сторінку [Створення свого першого предмета](../items/first-item), цей процес здасться вам дуже знайомим – вам потрібно буде створити метод, який реєструє ваш блок і його блок-предмет.

Вам слід помістити цей метод у клас під назвою `ModBlocks` (або як ви хочете його назвати).

Mojang робить щось надзвичайно подібне з ванілльними блоками; ви можете звернутися до класу `Blocks`, щоб побачити, як вони це роблять.

@[code transcludeWith=:::1](@/reference/latest/src/main/java/com/example/docs/block/ModBlocks.java)

---

Як і з предметами, вам потрібно переконатися, що клас завантажено, щоб усі статичні поля, що містять екземпляри вашого блоку, були ініціалізовані.

Ви можете зробити це, створивши фіктивний метод `initialize`, який можна викликати в [ініціалізаторі мода](./getting-started/project-structure#entrypoints), щоб запустити статичну ініціалізацію.

:::info
Якщо ви не знаєте, що таке статична ініціалізація, то це процес ініціалізації статичних полів у класі. Це робиться, коли клас завантажується JVM, і робиться до створення будь-яких екземплярів класу.
:::

```java
public class ModBlocks {
    // ...

    public static void initialize() {}
}
```

@[code transcludeWith=:::1](@/reference/latest/src/main/java/com/example/docs/block/FabricDocsReferenceBlocks.java)

## Створення та реєстрація вашого блоку {#creating-and-registering-your-block}

Подібно до предметів, блоки приймають у своєму конструкторі клас `Blocks.Settings`, який визначає властивості блоку, такі як його звукові ефекти та рівень видобутку.

Ми не будемо розглядати всі варіанти тут — ви можете самостійно переглянути клас, щоб побачити різні варіанти, які мають бути зрозумілими.

Для прикладу ми створимо простий блок, який має властивості бруду, але є іншим матеріалом.

:::tip
Ви також можете використовувати `AbstractBlock.Settings.copy(AbstractBlock block)`, щоб скопіювати налаштування блоку що існує, у цьому випадку ми могли б використати `Blocks.DIRT`, щоб скопіювати налаштування dirt, але для прикладу ми скористаємося конструктором.
:::

@[code transcludeWith=:::2](@/reference/latest/src/main/java/com/example/docs/block/ModBlocks.java)

Щоб автоматично створити блок-предмет ми можемо передати `true` параметру `shouldRegisterItem` методу `register`, який ми створили на попередньому кроці.

### Додавання вашого блоку до групи предметів {#adding-your-block-to-an-item-group}

Оскільки `BlockItem` створюється та реєструється автоматично, щоб додати його до групи предметів, ви повинні використати метод `Block.asItem()`, щоб отримати примірник `BlockItem`.

У цьому прикладі ми використаємо спеціальну групу предметів, створену на сторінці [Групи власних предметів](../items/custom-item-groups).

@[code transcludeWith=:::3](@/reference/latest/src/main/java/com/example/docs/block/ModBlocks.java)

---

Тепер ви повинні помітити, що ваш блок знаходиться у творчому інвентарі, і його можна розмістити у світі!

![Блоки у світі без відповідної моделі чи текстури](/assets/develop/blocks/first_block_0.png)

Однак є кілька проблем: блок-предмет не має назви, і блок не має текстури, моделі блоку чи моделі предмета.

## Додання перекладу для блока {#adding-block-translations}

Щоб додати переклад, ви повинні створити ключ перекладу у своєму файлі перекладу - `assets/<mod id here>/lang/en_us.json`, це англійська, для української створіть `uk_ua.json`.

Minecraft використовуватиме цей переклад у творчому інвентарі та інших місцях, де показано його назву, наприклад у повідомленнях команд.

```json
{
  "block.mod_id.condensed_dirt": "Condensed Dirt"
}
```

Ви можете перезапустити гру або створити свій мод і натиснути <kbd>F3</kbd>+<kbd>T</kbd>, щоб застосувати зміни, і ви побачите, що блок має назву у творчому інвентарі та інших місцях наприклад екран статистики.

## Моделі й текстури {#models-and-textures}

Усі текстури блоків можна знайти в теці `assets/<mod id here>/textures/block` - приклад текстури для блоку «Condensed Dirt» можна використовувати безплатно.

<0>Текстура</0>

Щоб текстура промальовувалася в грі, ви повинні створити модель блоку і предмета, які можна знайти у відповідних місцях для блоку «Condensed Dirt»:

- `assets/<mod id here>/models/block/condensed_dirt.json`
- `assets/<mod id here>/models/item/condensed_dirt.json`

Модель предмета досить проста, вона може просто використовувати модель блоку як батьківську, оскільки більшість моделей блоку підтримують відтворення в інтерфейсах:

@[code](@/reference/latest/src/main/resources/assets/fabric-docs-reference/models/item/condensed_dirt.json)

Однак у нашому випадку модель блоку має бути батьківською для моделі `block/cube_all`:

@[code](@/reference/latest/src/main/resources/assets/fabric-docs-reference/models/block/condensed_dirt.json)

Коли ви завантажуєте гру, ви можете помітити, що текстури все ще немає. Це тому, що вам потрібно додати визначення стану блоку.

## Створення визначення стану блоку {#creating-the-block-state-definition}

Визначення стану блоку використовується для вказівки грі, яку модель промальовувати на основі поточного стану блоку.

Для прикладу блоку, який не має складного стану блока, у визначенні потрібен лише один запис.

Цей файл має міститися в папці `assets/mod_id/blockstates`, а його назва має збігатися з ідентифікатором блоку, який використовується під час реєстрації вашого блоку в класі `ModBlocks`. Наприклад, якщо ID блоку `condensed_dirt`, файл повинен мати назву `condensed_dirt.json`.

@[code](@/reference/latest/src/main/resources/assets/fabric-docs-reference/blockstates/condensed_dirt.json)

Стани блоку справді складні, тому вони розглядаються на наступній сторінці: [Блокові стани](./blockstates)

Перезапустіть гру або перезавантажте за допомогою <kbd>F3</kbd>+<kbd>T</kbd>, щоб застосувати зміни – ви зможете побачити блокову текстуру в інвентарі та фізично у світі:

![Блок у світі з відповідною текстурою та моделлю](/assets/develop/blocks/first_block_4.png)

## Додання здобичі для блоку {#adding-block-drops}

Під час розбивання блоку під час виживання ви можете побачити, що блок не падає — можливо, вам потрібна ця функція, однак, щоб ваш блок випадав як предмет під час ламання, ви повинні застосувати його таблицю здобичі — файл таблиці здобичі слід розмістити в теку `data/<mod id here>/loot_table/blocks/`.

:::info
Щоб краще зрозуміти таблиці здобичі, ви можете звернутися до сторінки [Minecraft Wiki - Таблиці здобичі](https://minecraft.wiki/w/Loot_table).
:::

@[code](@/reference/latest/src/main/resources/data/fabric-docs-reference/loot_tables/blocks/condensed_dirt.json)

Ця таблиця здобичі забезпечує випадіння одного предмета з блоку, коли блок ламаний або підірваний вибухом.

## Рекомендований інструмент {#recommending-a-harvesting-tool}

Ви також можете захотіти, щоб ваш блок можна було збирати лише певним інструментом - наприклад, ви можете зробити свій блок, що ламається швидше за допомогою лопати.

Усі теґи інструментів слід розміщувати в теці `data/minecraft/tags/block/mineable/`, де назва файлу залежить від типу використовуваного інструменту, одного з наступного:

- `hoe.json`
- `axe.json`
- `pickaxe.json`
- `shovel.json`

Вміст файлу досить простий - це список предметів, які потрібно додати в теґ.

Цей приклад додає блок «Condensed Dirt» до теґу `shovel`.

@[code](@/reference/latest/src/main/resources/data/minecraft/tags/mineable/shovel.json)

Якщо ви бажаєте, щоб для видобутку блоку був потрібен інструмент, додайте `.requiresTool()` до налаштувань блоку, а також додайте відповідний теґ видобутку.

## Рівень копання {#mining-levels}

Подібним чином теґ рівня майнінгу можна знайти в теці `data/minecraft/tags/block/` й відповідає такому формату:

- `needs_stone_tool.json` - потребує як мінімум кам'яні інструменти
- `needs_iron_tool.json` - потребує як мінімум залізні інструменти
- `needs_diamond_tool.json` - потребує як мінімум діамантові інструменти.

Файл має той самий формат, що й файл інструменту збору врожаю – список предметів, які потрібно додати до теґу.

## Додаткові уточнення {#extra-notes}

Якщо ви додаєте кілька блоків до свого моду, ви можете розглянути можливість використання [генерації даних](https://fabricmc.net/wiki/tutorial:datagen_setup), щоб автоматизувати процес створення моделей блоків і предметів, визначень станів блоків, і таблиці здобичі.
